# pysystemtrade

./: pyproject.toml  setup.py
docs/notebooks/: introduction_with_fxdata.ipynb
sysinit/futures/: multiple_and_adjusted_from_csv_to_arctic.py  rollcalendars_from_arcticprices_to_csv.py  seed_price_data_from_IB.py
sysobjects/: contract_dates_and_expiries.py
sysproduction/: interactive_update_roll_status.py  update_historical_prices.py  update_sampled_contracts.py
sysproduction/reporting/: api.py
systems/provided/futures_chapter15/: futuresconfig.yaml
