[project]
name = "pysystemtrader"
version = "1.61"
authors = [
  { name="Robert Carver", email="rob@systematicmoney.org" },
]
description = "Systematic futures trading in Python"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU v3",
    "Operating System :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/robcarver17/pysystemtrade"
"Bug Tracker" = "https://github.com/robcarver17/pysystemtrade/issues"

[project.scripts]
interactive_update_roll_status = "sysproduction.interactive_update_roll_status:interactive_update_roll_status"
run_systems = "sysproduction.run_systems:run_systems"
interactive_manual_check_fx_prices = "sysproduction.interactive_manual_check_fx_prices:interactive_manual_check_fx_prices"
update_strategy_capital = "sysproduction.update_strategy_capital:update_strategy_capital"
update_sampled_contracts = "sysproduction.update_sampled_contracts:update_sampled_contracts"
clean_truncate_echo_files = "sysproduction.clean_truncate_echo_files:clean_truncate_echo_files"
run_stack_handler = "sysproduction.run_stack_handler:run_stack_handler"
interactive_diagnostics = "sysproduction.interactive_diagnostics:interactive_diagnostics"
update_total_capital = "sysproduction.update_total_capital:update_total_capital"
run_daily_fx_and_contract_updates = "sysproduction.run_daily_fx_and_contract_updates:run_daily_fx_and_contract_updates"
backup_state_files = "sysproduction.backup_state_files:backup_state_files"
interactive_manual_check_historical_prices = "sysproduction.interactive_manual_check_historical_prices:interactive_manual_check_historical_prices"
run_reports = "sysproduction.run_reports:run_reports"
update_historical_prices = "sysproduction.update_historical_prices:update_historical_prices"
clean_truncate_log_files = "sysproduction.clean_truncate_log_files:clean_truncate_log_files"
run_cleaners = "sysproduction.run_cleaners:run_cleaners"
run_capital_update = "sysproduction.run_capital_update:run_capital_update"
backup_arctic_to_csv = "sysproduction.backup_arctic_to_csv:backup_arctic_to_csv"
clean_truncate_backtest_states = "sysproduction.clean_truncate_backtest_states:clean_truncate_backtest_states"
run_strategy_order_generator = "sysproduction.run_strategy_order_generator:run_strategy_order_generator"
startup = "sysproduction.startup:startup"
interactive_controls = "sysproduction.interactive_controls:interactive_controls"
run_backups = "sysproduction.run_backups:run_backups"
run_daily_update_multiple_adjusted_prices = "sysproduction.run_daily_update_multiple_adjusted_prices:run_daily_update_multiple_adjusted_prices"
run_daily_price_updates = "sysproduction.run_daily_price_updates:run_daily_price_updates"
update_strategy_orders = "sysproduction.update_strategy_orders:update_strategy_orders"
backup_mongo_data_as_dump = "sysproduction.backup_mongo_data_as_dump:backup_mongo_data_as_dump"
update_system_backtests = "sysproduction.update_system_backtests:update_system_backtests"
interactive_update_capital_manual = "sysproduction.interactive_update_capital_manual:interactive_update_capital_manual"
update_fx_prices = "sysproduction.update_fx_prices:update_fx_prices"
update_multiple_adjusted_prices = "sysproduction.update_multiple_adjusted_prices:update_multiple_adjusted_prices"
interactive_order_stack = "sysproduction.interactive_order_stack:interactive_order_stack"
dashboard = "dashboard.app:main"



[tool.pytest.ini_options]
norecursedirs = "examples"
addopts = "--doctest-modules --ignore=systems/provided/moretradingrules/temp.py"
log_cli = "true"
log_cli_level = 10
log_format = '%(asctime)s %(levelname)s %(name)s %(message)s'
log_date_format = '%Y-%m-%d %H:%M:%S'
doctest_optionflags = ["ELLIPSIS", "NUMBER", "NORMALIZE_WHITESPACE"]
testpaths = [
    # "syscore",
    # "syscore/interactive/display",
    "syscore/pandas",
    "syscore/tests",
    # "sysdata",
    "sysdata/config",
    # "sysdata/sim",
    "sysdata/tests",
    "sysinit/futures/tests",
    # "syslogdiag",
    "systems/tests",
    "sysobjects/production",
    "sysobjects/tests",
    # "sysquant/estimators",
    "sysquant/optimisation",
    # "systems",
    # "systems/accounts",
    # "systems/provided",
    # "systems/provided/futures_chapter15",
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py38']
required-version = '22.12.0'
